@@ -1,4 +1,10 @@
 
+[B]7.0.5 (2025.01.04)[/B]
+- Faster title matching during scraping.
+- Fewer aliases used during title matching.
+- Fixed AllDebrid external resolving.
+- Fixed DebridLink external resolving.
+
 [B]7.0.4 (2025.01.02)[/B]
 - Various fixes for Windows.
 - Replaced IFF function for older SQLite versions.
